
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef size_t ULONG ;
struct TYPE_3__ {int Guid; } ;
typedef size_t* PULONG ;
typedef TYPE_1__* PGUIDREGINFO ;
typedef int LPGUID ;
typedef int BOOLEAN ;


 int FALSE ;
 scalar_t__ IsEqualGUID (int ,int *) ;
 int PAGED_CODE () ;
 int TRUE ;

BOOLEAN
ClassFindGuid(
    PGUIDREGINFO GuidList,
    ULONG GuidCount,
    LPGUID Guid,
    PULONG GuidIndex
    )
{
    ULONG i;

    PAGED_CODE();

    for (i = 0; i < GuidCount; i++)
    {
        if (IsEqualGUID(Guid, &GuidList[i].Guid))
        {
            *GuidIndex = i;
            return(TRUE);
        }
    }

    return(FALSE);
}
